Closed Bug 1751587 Opened 3 years ago Closed 3 years ago

Perma /builds/worker/checkouts/gecko/layout/base/nsLayoutDebugger.cpp:132:3: error: control reaches end of non-void function [-Werror=return-type]

Categories

(Core :: Web Painting, defect, P5)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox96 --- unaffected
firefox97 --- unaffected
firefox98 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mikokm)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(2 files)

Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=365098380&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/N5aehcR_TROQPM0-jwwSCw/runs/0/artifacts/public/logs/live_backing.log


[task 2022-01-22T22:18:08.573Z] 22:18:08     INFO -  layout/generic/Unified_cpp_layout_generic4.o
[task 2022-01-22T22:18:08.573Z] 22:18:08     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/generic'
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/base'
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_layout_base1.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/workspace/obj-build/layout/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/mathml -I/builds/worker/checkouts/gecko/layout/painting -I/builds/worker/checkouts/gecko/layout/printing -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/layout/xul/tree -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/view -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror  -MD -MP -MF .deps/Unified_cpp_layout_base1.o.pp   Unified_cpp_layout_base1.cpp
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  In file included from Unified_cpp_layout_base1.cpp:119:0:
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  /builds/worker/checkouts/gecko/layout/base/nsLayoutDebugger.cpp: In lambda function:
[task 2022-01-22T22:18:08.939Z] 22:18:08    ERROR -  /builds/worker/checkouts/gecko/layout/base/nsLayoutDebugger.cpp:132:3: error: control reaches end of non-void function [-Werror=return-type]
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -     };
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -     ^
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  In file included from Unified_cpp_layout_base1.cpp:56:0:
[task 2022-01-22T22:18:08.939Z] 22:18:08     INFO -  /builds/worker/checkouts/gecko/layout/base/nsCSSFrameConstructor.cpp: In member function 'void nsFrameConstructorState::ConstructBackdropFrameFor(nsIContent*, nsIFrame*)':
[task 2022-01-22T22:18:08.939Z] 22:18:08  WARNING -  /builds/worker/checkouts/gecko/layout/base/nsCSSFrameConstructor.cpp:1141:75: warning: 'placeholderType' may be used uninitialized in this function [-Wmaybe-uninitialized]
[task 2022-01-22T22:18:08.940Z] 22:18:08     INFO -         mPresShell, aContent, backdropFrame, frame, nullptr, placeholderType);
[task 2022-01-22T22:18:08.941Z] 22:18:08     INFO -                                                                             ^
[task 2022-01-22T22:18:08.941Z] 22:18:08     INFO -  cc1plus: all warnings being treated as errors
[task 2022-01-22T22:18:08.941Z] 22:18:08    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:658: Unified_cpp_layout_base1.o] Error 1
[task 2022-01-22T22:18:08.941Z] 22:18:08     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/base'
[task 2022-01-22T22:18:08.941Z] 22:18:08    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: layout/base/target-objects] Error 2
[task 2022-01-22T22:18:08.942Z] 22:18:08     INFO -  gmake[3]: *** Waiting for unfinished jobs....
[task 2022-01-22T22:18:08.942Z] 22:18:08     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/svg'
[task 2022-01-22T22:18:08.942Z] 22:18:08     INFO -  layout/svg/Unified_cpp_layout_svg2.o
[task 2022-01-22T22:18:08.942Z] 22:18:08     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/svg'
[task 2022-01-22T22:18:10.537Z] 22:18:10     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/mathml'
[task 2022-01-22T22:18:10.540Z] 22:18:10     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_layout_mathml1.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/layout/mathml -I/builds/worker/workspace/obj-build/layout/mathml -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/painting -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/mathml -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror  -MD -MP -MF .deps/Unified_cpp_layout_mathml1.o.pp   Unified_cpp_layout_mathml1.cpp
[task 2022-01-22T22:18:10.540Z] 22:18:10     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/mathml'
[task 2022-01-22T22:18:10.552Z] 22:18:10     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/painting'
[task 2022-01-22T22:18:10.552Z] 22:18:10     INFO -  layout/painting/Unified_cpp_layout_painting1.o
[task 2022-01-22T22:18:10.552Z] 22:18:10     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/painting'
[task 2022-01-22T22:18:12.187Z] 22:18:12     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/mathml'
[task 2022-01-22T22:18:12.189Z] 22:18:12     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_layout_mathml0.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/layout/mathml -I/builds/worker/workspace/obj-build/layout/mathml -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/painting -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/mathml -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror  -MD -MP -MF .deps/Unified_cpp_layout_mathml0.o.pp   Unified_cpp_layout_mathml0.cpp
[task 2022-01-22T22:18:12.189Z] 22:18:12     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/mathml'
[task 2022-01-22T22:18:12.191Z] 22:18:12     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/forms'
[task 2022-01-22T22:18:12.191Z] 22:18:12     INFO -  layout/forms/Unified_cpp_layout_forms1.o
Flags: needinfo?(mikokm)
Component: General → Web Painting
Product: Firefox Build System → Core

Set release status flags based on info from the regressing bug 1697979

Has Regression Range: --- → yes
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/d3febc5e995b Fix compiler warning r=emilio https://hg.mozilla.org/integration/autoland/rev/b06de68f39c5 Demote MOZ_RELEASE_ASSERT to MOZ_DIAGNOSTIC_ASSERT r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: