Bug 1751587 - Fix compiler warning r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D136731